Initial solution